KUBE/INGRESS-APPLICATION/react-rust-postgres/kube/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app4-backend
  namespace: app-4

spec:
  replicas: 1

  selector:
    matchLabels:
      app: app4-backend

  template:
    metadata:
      labels:
        app: app4-backend

    spec:
      containers:
        - name: backend
          image: docker.io/payalkharat/kubernetes-ingress:app4-backend

          ports:
            - containerPort: 8000
