KUBE/INGRESS-APPLICATION/react-rust-postgres/kube/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app4-db
  namespace: app-4

spec:
  replicas: 1

  selector:
    matchLabels:
      app: app4-db

  template:
    metadata:
      labels:
        app: app4-db

    spec:
      containers:
        - name: postgres
          image: docker.io/payalkharat/kubernetes-ingress:app4-db

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: app4-db-pvc
