KUBE/INGRESS-APPLICATION/react-rust-postgres/kube/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app4-frontend
  namespace: app-4

spec:
  type: ClusterIP

  selector:
    app: app4-frontend

  ports:
    - port: 80
      targetPort: 80
